--- a/TG.Exam.Refactoring/TG.Exam.Refactoring.csproj
+++ b/TG.Exam.Refactoring/TG.Exam.Refactoring.csproj
@@ -68,11 +68,15 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICacheRepository.cs" />
+    <Compile Include="Interfaces\IDatabaseRepository.cs" />
+    <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="OrderService.svc.cs">
       <DependentUpon>OrderService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CacheRepository.cs" />
+    <Compile Include="Repositories\DatabaseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
